fix double scroll

--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,8 @@ body {
   padding-right: 10rem;
   padding-left: 10rem;
   box-sizing: border-box;
-  overflow-y: scroll;
+  overflow-y: hidden;
+  
 }
 
 .loader h3 {
